# OMOP_Alchemy

./: .dockerignore  .env.example  .example_dotenv  .gitignore  .omop-maint.toml  404.html  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  index.html  mkdocs.yml  oa_system_config_demo.yaml  objects.inv  pyproject.cava_external.toml  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: docker-python.yml  python-publish.yml  tests.yml
advanced/: index.html
advanced/backends/: index.html
advanced/fulltext/: index.html
advanced/query_patterns/: index.html
advanced/timelines/: index.html
advanced/views/: index.html
advanced/vocabulary_load_performance/: index.html
api/: index.html
api/architecture/: index.html
api/base/: index.html
api/columns/: index.html
api/configuration/: index.html
api/relationships/: index.html
api/typing/: index.html
cli/: index.html
cli/reference/: index.html
docker/: docker-compose.yml
docker/jupyter/: Dockerfile
docker/postgres/: Dockerfile  custom.conf
docker/python/: .dockerignore  Dockerfile
docs/: index.md
docs/advanced/: fulltext.md  index.md  timelines.md  vocabulary_load_performance.md
docs/api/: configuration.md  query-filtering.md  typing.md
docs/cli/: index.md  reference.md
docs/getting-started/: configuration.md  index.md  installation.md  maintenance.md  quickstart.md
getting-started/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/maintenance/: index.html
getting-started/quickstart/: index.html
js/: mermaid-init.js
models/: index.html
models/clinical/: index.html
models/clinical/condition_occurrence/: index.html
models/clinical/drug_exposure/: index.html
models/clinical/measurement/: index.html
models/clinical/observation/: index.html
models/clinical/person/: index.html
models/derived/: index.html
models/derived/cohort/: index.html
models/derived/condition_era/: index.html
models/derived/dose_era/: index.html
models/derived/drug_era/: index.html
models/health_economic/: index.html
models/health_economic/cost/: index.html
models/health_economic/payer_plan_period/: index.html
models/health_system/: index.html
models/health_system/care_site/: index.html
models/health_system/location/: index.html
models/health_system/provider/: index.html
models/health_system/visit_detail/: index.html
models/health_system/visit_occurrence/: index.html
models/metadata/: index.html
models/metadata/cdm_source/: index.html
models/metadata/metadata/: index.html
models/structural/: index.html
models/structural/episode/: index.html
models/structural/episode_event/: index.html
models/structural/fact_relationship/: index.html
models/unstructured/: index.html
models/unstructured/image/: index.html
models/unstructured/image_feature/: index.html
models/unstructured/note/: index.html
models/unstructured/note_nlp/: index.html
models/vocabulary/: index.html
models/vocabulary/concept/: index.html
models/vocabulary/concept_relationship/: index.html
models/vocabulary/domain/: index.html
notebooks/: 00_config.ipynb  00_select_test_fixtures copy.ipynb  00_select_test_fixtures.ipynb  01_load_data.ipynb  01_validate_model.ipynb  02_test_load.ipynb  02_vocab_lookups.ipynb  03_basic_model_query_demo.ipynb  03_basic_validation.ipynb  04_dynamic_labels_and_properties.ipynb  04_timeline.ipynb  05_polymorphism.ipynb  06_episodes_example.ipynb  basic_validation.ipynb  concept_enums.py  config.ipynb  demo.ipynb  dynamic_labels.ipynb  polymorphism.ipynb  test.db-journal  test.ipynb  vocab_lookups.ipynb
omop_alchemy/: __init__.py  backend_support.py  config.py  db.py  errors.py  logger_config.py
omop_alchemy/backends/: __init__.py  base.py  postgres.py  resolve.py  sqlite.py
omop_alchemy/cdm/: __init__.py
omop_alchemy/conventions/: __init__.py  concept_enumerators.py  vocab_lookups.py
omop_alchemy/db/: __init__.py  config.py  populate_db.py
omop_alchemy/helpers/: __init__.py  create_db.py  populate_db.py
omop_alchemy/maintenance/: __init__.py  _cli_utils.py  analyze_tables.py  ascii.py  backend_support.py  backup.py  cli.py  cli_backup.py  cli_config.py  cli_foreign_keys.py  cli_fulltext.py  cli_indexes.py  cli_schema.py  cli_schema_doctor.py  cli_schema_info.py  cli_schema_reconcile.py  cli_schema_summary.py  cli_schema_tables.py  cli_tables.py  cli_vocab.py  create_tables.py  data_summary.py  defaults.py  doctor.py  export_ddl.py  foreign_keys.py  help.py  indexes.py  info.py  load_vocab.py  reconcile.py  reset_sequences.py  tables.py  truncate_tables.py  ui.py
omop_alchemy/model/: __init__.py  concept_links.py
omop_alchemy/tables/: __init__.py  conventions.py
search/: search_index.json
tests/: README.md  conftest.py  docker-compose.yaml  example-docker-compose.yaml  test_analyze_tables.py  test_ascii.py  test_backup.py  test_cli_config.py  test_cli_help.py  test_conditions_basic.py  test_config.py  test_config_and_setup.py  test_config_driver.py  test_create_tables.py  test_data_summary.py  test_defaults.py  test_doctor.py  test_episodes_basic.py  test_export_ddl.py  test_foreign_keys.py  test_fulltext.py  test_indexes.py  test_info.py  test_load_vocab.py  test_load_vocab_postgres.py  test_load_vocab_source.py  test_maintenance_tables.py  test_person_basic.py  test_reconcile.py  test_reset_sequences.py  test_schema_mixins.py  test_truncate_tables.py
tests/fixtures/: create_test_fixtures.py
validation/: index.html
validation/domain-rules/: index.html
validation/domain-runtime/: index.html
(+253 files in other folders)
