[project]
name = "omop-alchemy"
version = "0.6.0"
description = "SQLAlchemy-based models, validation, and utilities for the OHDSI OMOP Common Data Model"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Georgie Kennedy", email = "georgie.kennedy@unsw.edu.au" }
]
license = { text = "Apache-2.0" }

keywords = [
  "OMOP",
  "OHDSI",
  "clinical-data",
  "health-informatics",
  "sqlalchemy",
  "ETL",
  "real-world-evidence"
]


classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Healthcare Industry",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "sqlalchemy>=2.0.45",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "typer>=0.12",
  "rich>=13.0",
  "orm-loader>=0.3.25",
]

[project.optional-dependencies]
postgres = [
  "psycopg[binary]>=3.2",
  "psycopg2-binary>=2.9",
]

dev = [
  "ipython>=8.0",
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "mypy>=1.8",
  "ruff>=0.4",
  "mkdocs-material>=9.7.1",
  "mkdocstrings-python>=2.0.1",
  "mkdocs>=1.6.1",
  "mkdocs-mermaid2-plugin"
]

docs = [
  "sphinx",
  "myst-parser",
]

[project.urls]
Homepage = "https://australiancancerdatanetwork.github.io/OMOP_Alchemy/"
Repository = "https://github.com/AustralianCancerDataNetwork/OMOP_Alchemy"
Issues = "https://github.com/AustralianCancerDataNetwork/OMOP_Alchemy/issues"

[project.scripts]
omop-maint = "omop_alchemy.maintenance.cli:main"


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["omop_alchemy*"]

[tool.setuptools.package-data]
omop_alchemy = ["py.typed"]
