[project]
name = "omop-alchemy"
version = "0.7.0"
description = "SQLAlchemy-based models, validation, and utilities for the OHDSI OMOP Common Data Model"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Georgie Kennedy", email = "georgie.kennedy@unsw.edu.au" }
]
license = { text = "Apache-2.0" }

keywords = [
  "OMOP",
  "OHDSI",
  "clinical-data",
  "health-informatics",
  "sqlalchemy",
  "ETL",
  "real-world-evidence"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Healthcare Industry",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "sqlalchemy>=2.0.45",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "oa-configurator>=0.1.1",
  "typer>=0.12",
  "rich>=13.0",
  "orm-loader>=0.5.0",
]

[project.optional-dependencies]
postgres = [
  "psycopg[binary]>=3.2",
]

dev = [
  "oa-configurator[postgres]>=0.1.1",
  "ipython>=8.0",
  "requests>=2.33.0",
  "pytest>=9.0.3",
  "pytest-cov>=4.0",
  "mypy>=1.8",
  "ruff>=0.4",
  "mkdocs-material>=9.7.1",
  "mkdocstrings-python>=2.0.1",
  "mkdocs>=1.6.1",
  "mkdocs-mermaid2-plugin"
]

docs = [
  "sphinx",
  "myst-parser",
]

[project.urls]
Homepage = "https://australiancancerdatanetwork.github.io/OMOP_Alchemy/"
Repository = "https://github.com/AustralianCancerDataNetwork/OMOP_Alchemy"
Issues = "https://github.com/AustralianCancerDataNetwork/OMOP_Alchemy/issues"

[project.scripts]
omop-alchemy = "omop_alchemy.maintenance.cli:main"

[project.entry-points."omop.config"]
omop_alchemy = "omop_alchemy.config:OmopAlchemyConfig"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["omop_alchemy"]

[tool.pytest.ini_options]
